--- a/Projektimallit/Xamarin/Windows/MonoDevelop.Jypeli.Windows.csproj
+++ b/Projektimallit/Xamarin/Windows/MonoDevelop.Jypeli.Windows.csproj
@@ -16,16 +16,22 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Windows\Debug</OutputPath>
+    <OutputPath>..\bin\Windows\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <CustomCommands>
+      <CustomCommands>
+        <Command type="AfterBuild" command="mdtool setup pack ${TargetFile}" workingdir="${TargetDir}" />
+        <Command type="AfterBuild" command="mdtool setup rep-build ." workingdir="${TargetDir}" />
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Windows\Release</OutputPath>
+    <OutputPath>..\bin\Windows\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
@@ -37,193 +43,225 @@
     </CustomCommands>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="JypeliProject4.cs" />
+    <Compile Include="..\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\JypeliProject4.cs">
+      <Link>JypeliProject4.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="icons\Jypeli-32.png">
+    <EmbeddedResource Include="..\icons\Jypeli-32.png">
+      <Link>icons\Jypeli-32.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="icons\PerusPeli-16.png">
+    <EmbeddedResource Include="..\icons\PerusPeli-16.png">
+      <Link>icons\PerusPeli-16.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="icons\PerusPeli-32.png">
+    <EmbeddedResource Include="..\icons\PerusPeli-32.png">
+      <Link>icons\PerusPeli-32.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\PerusPeliCs.xft.xml">
+    <EmbeddedResource Include="..\icons\FysiikkaPeli-16.png">
+      <Link>icons\FysiikkaPeli-16.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\PerusPeli\Icon-md.png">
+    <EmbeddedResource Include="..\icons\FysiikkaPeli-32.png">
+      <Link>icons\FysiikkaPeli-32.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\PerusPeli\Ohjelma.cs">
+    <EmbeddedResource Include="..\icons\Tasohyppelypeli-16.png">
+      <Link>icons\Tasohyppelypeli-16.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\PerusPeli\Peli.cs">
+    <EmbeddedResource Include="..\icons\Tasohyppelypeli-32.png">
+      <Link>icons\Tasohyppelypeli-32.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="icons\FysiikkaPeli-16.png">
+    <EmbeddedResource Include="..\templates\PerusPeliCs.xft.xml">
+      <Link>templates\PerusPeliCs.xft.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="icons\FysiikkaPeli-32.png">
+    <EmbeddedResource Include="..\templates\PerusPeli\Icon-md.png">
+      <Link>templates\PerusPeli\Icon-md.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\FysiikkaPeli\Icon-md.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="templates\FysiikkaPeli\Peli.cs">
+    <EmbeddedResource Include="..\templates\PerusPeli\Peli.cs">
+      <Link>templates\PerusPeli\Peli.cs</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="icons\Tasohyppelypeli-16.png">
+    <EmbeddedResource Include="..\templates\PerusPeli\Ohjelma.cs">
+      <Link>templates\PerusPeli\Ohjelma.cs</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="icons\Tasohyppelypeli-32.png">
+    <EmbeddedResource Include="..\templates\FysiikkaPeli\Icon-md.png">
+      <Link>templates\FysiikkaPeli\Icon-md.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\Tasohyppelypeli\Content\kentta1.txt">
+    <EmbeddedResource Include="..\templates\FysiikkaPeli\Peli.cs">
+      <Link>templates\FysiikkaPeli\Peli.cs</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\Tasohyppelypeli\Content\norsu.png">
+    <EmbeddedResource Include="..\templates\Tasohyppelypeli\Peli.cs">
+      <Link>templates\Tasohyppelypeli\Peli.cs</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\Tasohyppelypeli\Content\tahti.png">
+    <EmbeddedResource Include="..\templates\Tasohyppelypeli\Content\kentta1.txt">
+      <Link>templates\Tasohyppelypeli\Content\kentta1.txt</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\Tasohyppelypeli\Icon-md.png">
+    <EmbeddedResource Include="..\templates\Tasohyppelypeli\Content\maali.xnb">
+      <Link>templates\Tasohyppelypeli\Content\maali.xnb</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\Tasohyppelypeli\Peli.cs">
+    <EmbeddedResource Include="..\templates\Tasohyppelypeli\Content\norsu.png">
+      <Link>templates\Tasohyppelypeli\Content\norsu.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\MonoDevelop.Jypeli.Windows.addin.xml" />
-    <EmbeddedResource Include="templates\ConsoleMain\Program.cs">
+    <EmbeddedResource Include="..\templates\Tasohyppelypeli\Content\tahti.png">
+      <Link>templates\Tasohyppelypeli\Content\tahti.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\ConsoleMain.xpt.xml">
+    <EmbeddedResource Include="..\templates\Tasohyppelypeli\Icon-md.png">
+      <Link>templates\Tasohyppelypeli\Icon-md.png</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\Jypeli.dll">
+    <EmbeddedResource Include="..\Properties\MonoDevelop.Jypeli.Windows.addin.xml">
+      <Link>Properties\MonoDevelop.Jypeli.Windows.addin.xml</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\Jypeli.dll">
       <Link>assemblies\Windows\Jypeli.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\Jypeli.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\Jypeli.xml">
       <Link>assemblies\Windows\Jypeli.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\Jypeli.Physics2d.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\Jypeli.Physics2d.dll">
       <Link>assemblies\Windows\Jypeli.Physics2d.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\Jypeli.Physics2d.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\Jypeli.Physics2d.xml">
       <Link>assemblies\Windows\Jypeli.Physics2d.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\MonoGame.Framework.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\MonoGame.Framework.dll">
       <Link>assemblies\Windows\MonoGame.Framework.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\MonoGame.Framework.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\MonoGame.Framework.xml">
       <Link>assemblies\Windows\MonoGame.Framework.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct2D1.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct2D1.dll">
       <Link>assemblies\Windows\SharpDX.Direct2D1.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct2D1.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct2D1.xml">
       <Link>assemblies\Windows\SharpDX.Direct2D1.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct3D9.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct3D9.dll">
       <Link>assemblies\Windows\SharpDX.Direct3D9.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct3D9.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct3D9.xml">
       <Link>assemblies\Windows\SharpDX.Direct3D9.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct3D11.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct3D11.dll">
       <Link>assemblies\Windows\SharpDX.Direct3D11.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct3D11.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.Direct3D11.xml">
       <Link>assemblies\Windows\SharpDX.Direct3D11.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.dll">
       <Link>assemblies\Windows\SharpDX.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.DXGI.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.DXGI.dll">
       <Link>assemblies\Windows\SharpDX.DXGI.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.DXGI.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.DXGI.xml">
       <Link>assemblies\Windows\SharpDX.DXGI.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.MediaFoundation.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.MediaFoundation.dll">
       <Link>assemblies\Windows\SharpDX.MediaFoundation.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.MediaFoundation.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.MediaFoundation.xml">
       <Link>assemblies\Windows\SharpDX.MediaFoundation.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.RawInput.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.RawInput.dll">
       <Link>assemblies\Windows\SharpDX.RawInput.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.RawInput.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.RawInput.xml">
       <Link>assemblies\Windows\SharpDX.RawInput.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.XAudio2.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.XAudio2.dll">
       <Link>assemblies\Windows\SharpDX.XAudio2.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.XAudio2.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.XAudio2.xml">
       <Link>assemblies\Windows\SharpDX.XAudio2.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.XInput.dll">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.XInput.dll">
       <Link>assemblies\Windows\SharpDX.XInput.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.XInput.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.XInput.xml">
       <Link>assemblies\Windows\SharpDX.XInput.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.xml">
+    <EmbeddedResource Include="..\..\..\Physics2d\bin\Windows\AnyCPU\Debug\SharpDX.xml">
       <Link>assemblies\Windows\SharpDX.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\SimplePhysics\bin\Windows\AnyCPU\Debug\Jypeli.SimplePhysics.dll">
+    <EmbeddedResource Include="..\..\..\SimplePhysics\bin\Windows\AnyCPU\Debug\Jypeli.SimplePhysics.dll">
       <Link>assemblies\Windows\Jypeli.SimplePhysics.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="..\..\SimplePhysics\bin\Windows\AnyCPU\Debug\Jypeli.SimplePhysics.xml">
+    <EmbeddedResource Include="..\..\..\SimplePhysics\bin\Windows\AnyCPU\Debug\Jypeli.SimplePhysics.xml">
       <Link>assemblies\Windows\Jypeli.SimplePhysics.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\Tasohyppelypeli.xpt.xml">
+    <EmbeddedResource Include="..\templates\PerusPeli.xpt.xml">
+      <Link>templates\PerusPeli.xpt.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\Tasohyppelypeli\Content\maali.xnb">
+    <EmbeddedResource Include="..\templates\Tasohyppelypeli.xpt.xml">
+      <Link>templates\Tasohyppelypeli.xpt.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\FysiikkaPeli.Physics2d.xpt.xml">
+    <EmbeddedResource Include="..\templates\FysiikkaPeli.Physics2d.xpt.xml">
+      <Link>templates\FysiikkaPeli.Physics2d.xpt.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\FysiikkaPeli.SimplePhysics.xpt.xml">
+    <EmbeddedResource Include="..\templates\FysiikkaPeli.SimplePhysics.xpt.xml">
+      <Link>templates\FysiikkaPeli.SimplePhysics.xpt.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-    <EmbeddedResource Include="templates\PerusPeli.xpt.xml">
+    <EmbeddedResource Include="..\templates\ConsoleMain\Program.cs">
+      <Link>templates\ConsoleMain\Program.cs</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\templates\ConsoleMain.xpt.xml">
+      <Link>templates\ConsoleMain.xpt.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MonoDevelop.Addins.0.2.3\build\net40\MonoDevelop.Addins.targets" Condition="Exists('packages\MonoDevelop.Addins.0.2.3\build\net40\MonoDevelop.Addins.targets')" />
+  <Import Project="..\packages\MonoDevelop.Addins.0.3.0\build\net40\MonoDevelop.Addins.targets" Condition="Exists('..\packages\MonoDevelop.Addins.0.3.0\build\net40\MonoDevelop.Addins.targets')" />
   <ItemGroup>
     <Folder Include="icons\" />
     <Folder Include="templates\" />
@@ -235,5 +273,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <AddinReference Include="MonoDevelop.Xamarin.Ide" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Xml" />
   </ItemGroup>
 </Project>
