--- a/branches/MonoGame/Projektimallit/WindowsGL/FysiikkaPeli_SimplePhysics/FysiikkaPeli.csproj
+++ b/branches/MonoGame/Projektimallit/WindowsGL/FysiikkaPeli_SimplePhysics/FysiikkaPeli.csproj
@@ -44,7 +44,7 @@
     <Reference Include="MonoGame.Framework">
 	  <HintPath>$(registry:HKEY_LOCAL_MACHINE\Software\MonoJypeli@Install_Dir)\Common\MonoGame.Framework.dll</HintPath>
 	</Reference>
-    <Reference Include="Jypeli>
+    <Reference Include="Jypeli">
 	  <HintPath>$(registry:HKEY_LOCAL_MACHINE\Software\MonoJypeli@Install_Dir)\Common\Jypeli.dll</HintPath>
 	</Reference>
     <Reference Include="Jypeli.SimplePhysics">
